c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/extra_credit/compound_assign_from_string.c
// Can't use a string on the right side of a compound assignment expression
int main(void) {
    char * s =  "some string ";
    s += "another str";
    return 0;
}